fix too much comprehensive selector
change selector to more precise. eg: [style*="wq.png"] to [style*="/wq.png"]

--- a/Dubrovnik/Dubrovnik-pieces-international.user.css
+++ b/Dubrovnik/Dubrovnik-pieces-international.user.css
@@ -3,7 +3,7 @@
 @namespace      ChessSkins
 @author         sadsnake1 (pieces), ChessSkins (Stylus theme)
 @description    `Bobby Fischer's favourite piece set style: Dubrovnik.`
-@version        1.0.6
+@version        1.0.7
 @license        CC BY-NC-SA 4.0 https://creativecommons.org/licenses/by-nc-sa/4.0/
 @preprocessor   stylus
 
@@ -61,73 +61,73 @@ domain("chesskid.com"), domain("chessable.com") {
     .piece.wk:not(.pseudo3d .piece.wk),
     .promotion-piece.wk:not(.pseudo3d .promotion-piece.wk),
     [data-hand-piece="wk"],
-    div [style*="wk.png"]:not([class="game-preview-themed-component"]):not(div#board.board > div) {
+    div [style*="/wk.png"]:not([class="game-preview-themed-component"]):not(div#board.board > div) {
         background-image: url(wK)!important;
     }
     .piece.wq:not(.pseudo3d .piece.wq),
     .promotion-piece.wq:not(.pseudo3d .promotion-piece.wq),
     [data-hand-piece="wq"],
-    div [style*="wq.png"]:not([class="game-preview-themed-component"]):not(div#board.board > div) {
+    div [style*="/wq.png"]:not([class="game-preview-themed-component"]):not(div#board.board > div) {
         background-image: url(wQ)!important;
     }
     .piece.wb:not(.pseudo3d .piece.wb),
     .promotion-piece.wb:not(.pseudo3d .promotion-piece.wb),
     [data-hand-piece="wb"],
-    div [style*="wb.png"]:not([class="game-preview-themed-component"]):not(div#board.board > div) {
+    div [style*="/wb.png"]:not([class="game-preview-themed-component"]):not(div#board.board > div) {
         background-image: url(wB)!important;
     }
     .piece.wn:not(.pseudo3d .piece.wn),
     .promotion-piece.wn:not(.pseudo3d .promotion-piece.wn),
     [data-hand-piece="wn"],
-    div [style*="wn.png"]:not([class="game-preview-themed-component"]):not(div#board.board > div) {
+    div [style*="/wn.png"]:not([class="game-preview-themed-component"]):not(div#board.board > div) {
         background-image: url(wN)!important;
     }
     .piece.wr:not(.pseudo3d .piece.wr),
     .promotion-piece.wr:not(.pseudo3d .promotion-piece.wr),
     [data-hand-piece="wr"],
-    div [style*="wr.png"]:not([class="game-preview-themed-component"]):not(div#board.board > div) {
+    div [style*="/wr.png"]:not([class="game-preview-themed-component"]):not(div#board.board > div) {
         background-image: url(wR)!important;
     }
     .piece.wp:not(.pseudo3d .piece.wp),
     .promotion-piece.wp:not(.pseudo3d .promotion-piece.wp),
     [data-hand-piece="wp"],
-    div [style*="wp.png"]:not([class="game-preview-themed-component"]):not(div#board.board > div) {
+    div [style*="/wp.png"]:not([class="game-preview-themed-component"]):not(div#board.board > div) {
         background-image: url(wP)!important;
     }
     .piece.bk:not(.pseudo3d .piece.bk),
     .promotion-piece.bk:not(.pseudo3d .promotion-piece.bk),
     [data-hand-piece="bk"],
-    div [style*="bk.png"]:not([class="game-preview-themed-component"]):not(div#board.board > div) {
+    div [style*="/bk.png"]:not([class="game-preview-themed-component"]):not(div#board.board > div) {
         background-image: url(bK)!important;
     }
     .piece.bq:not(.pseudo3d .piece.bq),
     .promotion-piece.bq:not(.pseudo3d .promotion-piece.bq),
     [data-hand-piece="bq"],
-    div [style*="bq.png"]:not([class="game-preview-themed-component"]):not(div#board.board > div) {
+    div [style*="/bq.png"]:not([class="game-preview-themed-component"]):not(div#board.board > div) {
         background-image: url(bQ)!important;
     }
     .piece.bb:not(.pseudo3d .piece.bb),
     .promotion-piece.bb:not(.pseudo3d .promotion-piece.bb),
     [data-hand-piece="bb"],
-    div [style*="bb.png"]:not([class="game-preview-themed-component"]):not(div#board.board > div) {
+    div [style*="/bb.png"]:not([class="game-preview-themed-component"]):not(div#board.board > div) {
         background-image: url(bB)!important;
     }
     .piece.bn:not(.pseudo3d .piece.bn),
     .promotion-piece.bn:not(.pseudo3d .promotion-piece.bn),
     [data-hand-piece="bn"],
-    div [style*="bn.png"]:not([class="game-preview-themed-component"]):not(div#board.board > div) {
+    div [style*="/bn.png"]:not([class="game-preview-themed-component"]):not(div#board.board > div) {
         background-image: url(bN)!important;
     }
     .piece.br:not(.pseudo3d .piece.br),
     .promotion-piece.br:not(.pseudo3d .promotion-piece.br),
     [data-hand-piece="br"],
-    div [style*="br.png"]:not([class="game-preview-themed-component"]):not(div#board.board > div) {
+    div [style*="/br.png"]:not([class="game-preview-themed-component"]):not(div#board.board > div) {
         background-image: url(bR)!important;
     }
     .piece.bp:not(.pseudo3d .piece.bp),
     .promotion-piece.bp:not(.pseudo3d .promotion-piece.bp),
     [data-hand-piece="bp"],
-    div [style*="bp.png"]:not([class="game-preview-themed-component"]):not(div#board.board > div) {
+    div [style*="/bp.png"]:not([class="game-preview-themed-component"]):not(div#board.board > div) {
         background-image: url(bP)!important;
     }
     /*pieces for mini-boards*/
